<resources>
    <string name="headphone_section">HEADPHONE</string>
    <string name="model_bzm01">BZM-01</string>
    <string name="bluetooth_label">Bluetooth</string>
    <string name="battery_label">Battery</string>
    <string name="battery_percent">20%</string>
    <string name="frequency_range_label">Frequency range</string>
    <string name="frequency_range_value">6Hz - 22kHz</string>
    <string name="bluetooth_version_label">Bluetooth version</string>
    <string name="bluetooth_version_value">Bluetooth 5.0</string>
    <string name="power_supply_label">Power supply</string>
    <string name="power_supply_value">5.0 V DC, 330mA</string>
    <string name="firmware_label">Firmware</string>
    <string name="firmware_value">4824.13az</string>
    <string name="dolby_label">DOLBY ATMOS</string>
    <string name="noise_label">Noise cancellation</string>
    <string name="save_button">Save</string>
    <string name="todo">TODO</string>
    <string name="app_name">FinTest_66051096</string>
</resources>
